# ManipuladorKuka

./: .gitignore  README.md
catkin_ws/: frames.gv
catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws/install/: .rosinstall  local_setup.sh  setup.sh
catkin_ws/install/share/test/: package.xml
catkin_ws/src/assembly_kuka_simp/: CMakeLists.txt  package.xml
catkin_ws/src/assembly_kuka_simp/config/: joint_names_assembly_kuka_simp.yaml  joints.yaml  link12.yaml  link23.yaml  link34.yaml  link45.yaml  link56.yaml  linkb1.yaml  position.yaml
catkin_ws/src/assembly_kuka_simp/launch/: display.launch  display2.launch  gazebo.launch  joints.launch
catkin_ws/src/assembly_kuka_simp/meshes/: base_link.dae  base_link.stl  link_1.dae  link_2.dae  link_3.dae  link_4.dae  link_5.dae  link_6.dae
catkin_ws/src/assembly_kuka_simp/urdf/: assembly_kuka_simp.csv  assembly_kuka_simp.gv  assembly_kuka_simp.urdf  kuka_gazebo.urdf  kuka_modelo.urdf
catkin_ws/src/hardware/head/: CMakeLists.txt
catkin_ws/src/kinect_cal_data/Quinta calibración/: 0000_ir_points.yaml  0000_sync_color_points.yaml  0000_sync_ir_points.yaml  0001_ir_points.yaml  0001_sync_color_points.yaml  0001_sync_ir_points.yaml  0002_ir_points.yaml  0002_sync_color_points.yaml  0002_sync_ir_points.yaml  0003_color_points.yaml  0003_sync_color_points.yaml  0003_sync_ir_points.yaml  0004_color_points.yaml  0004_ir_points.yaml  0004_sync_color_points.yaml  0004_sync_ir_points.yaml  0005_sync_color_points.yaml  0005_sync_ir_points.yaml  0006_color_points.yaml  0006_sync_color_points.yaml  0006_sync_ir_points.yaml  0007_color_points.yaml  0007_ir_points.yaml  0007_sync_color_points.yaml  0007_sync_ir_points.yaml  0008_ir_points.yaml  0008_sync_color_points.yaml  0008_sync_ir_points.yaml  0009_color_points.yaml  0009_ir_points.yaml  0009_sync_color_points.yaml  0009_sync_ir_points.yaml  0010_sync_color_points.yaml  0010_sync_ir_points.yaml  0011_color_points.yaml  0011_ir_points.yaml  0011_sync_color_points.yaml  0011_sync_ir_points.yaml  0012_color_points.yaml  0012_ir_points.yaml  (+421 more)
catkin_ws/src/kinect_cal_data/Quinta_cal_todo/: 0000_color_points.yaml  0001_color_points.yaml  0002_color_points.yaml  0002_sync_ir_points.yaml  0003_ir_points.yaml  0003_sync_color_points.yaml  0004_sync_color_points.yaml  0005_color_points.yaml  0005_ir_points.yaml  0005_sync_ir_points.yaml  0006_ir_points.yaml  0006_sync_color_points.yaml  0008_color_points.yaml  0008_sync_color_points.yaml  0010_color_points.yaml  0010_ir_points.yaml  0010_sync_color_points.yaml  0011_sync_ir_points.yaml  0012_sync_color_points.yaml  0012_sync_ir_points.yaml  0013_sync_color_points.yaml  0014_color_points.yaml  0014_ir_points.yaml  0015_ir_points.yaml  0016_ir_points.yaml  0016_sync_color_points.yaml  0016_sync_ir_points.yaml  0017_sync_ir_points.yaml  0018_ir_points.yaml  0020_color_points.yaml  0021_color_points.yaml  0021_ir_points.yaml  0021_sync_color_points.yaml  0022_color_points.yaml  0022_ir_points.yaml  0022_sync_color_points.yaml  0023_sync_color_points.yaml  0023_sync_ir_points.yaml  0024_ir_points.yaml  0024_sync_ir_points.yaml  (+285 more)
catkin_ws/src/kinect_cal_data/Septima_calibracion/: 0000_color_points.yaml  0001_color_points.yaml  0002_color_points.yaml  0003_color_points.yaml  0004_color_points.yaml  0005_color_points.yaml  0006_color_points.yaml  0007_color_points.yaml  0008_color_points.yaml  0009_color_points.yaml  0010_color_points.yaml  0011_color_points.yaml  0012_color_points.yaml  0013_color_points.yaml  0014_color_points.yaml  0015_color_points.yaml  0016_color_points.yaml  0017_color_points.yaml  0018_color_points.yaml  0019_color_points.yaml  0020_color_points.yaml  0021_color_points.yaml  0022_color_points.yaml  0023_color_points.yaml  0024_color_points.yaml  (+31 more)
catkin_ws/src/kuka_control/: CMakeLists.txt  package.xml
catkin_ws/src/kuka_description/: CMakeLists.txt  package.xml
catkin_ws/src/kuka_gazebo/: CMakeLists.txt  package.xml
catkin_ws/src/kuka_moveit/: .setup_assistant  CMakeLists.txt
catkin_ws/src/kuka_moveit/config/: assembly_kuka_simp.srdf  controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ros_controllers.yaml  sensors_3d.yaml
catkin_ws/src/kuka_moveit/launch/: demo_gazebo.launch  gazebo.launch  kuka_moveit_controller_manager.launch.xml  move_group.launch  planning_context.launch  ros_controllers.launch  sensor_manager.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
catkin_ws/src/modelo_kuka/: CMakeLists.txt  package.xml
catkin_ws/src/start/: CMakeLists.txt  package.xml
catkin_ws/src/tools/hardware_tools/: CMakeLists.txt  package.xml
catkin_ws/src/tools/hardware_tools/include/hardware_tools/: VisionTools.h
catkin_ws/src/tools/hardware_tools/src/: VisionTools.cpp
catkin_ws/src/vision/: time_planes_2.cpp
toInstall/: install_all_dependences.sh
toInstall/utils/: libfreenect_install.sh
(+495 files in other folders)
